# move

./: Cargo.toml  README.md
move-abstract-interpreter/: Cargo.toml
move-abstract-interpreter/src/: absint.rs  control_flow_graph.rs  lib.rs
move-abstract-interpreter/src/unit_tests/: control_flow_graph_tests.rs  mod.rs
move-analyzer/: Cargo.toml
move-analyzer/src/: analyzer.rs  compiler_info.rs  context.rs  diagnostics.rs  inlay_hints.rs  lib.rs  symbols.rs  utils.rs  vfs.rs
move-analyzer/src/analysis/: mod.rs  parsing_analysis.rs  typing_analysis.rs
move-analyzer/src/completions/: dot.rs  mod.rs  name_chain.rs  snippets.rs  utils.rs
move-bytecode-source-map/: Cargo.toml
move-bytecode-source-map/src/: lib.rs  mapping.rs  marking.rs  source_map.rs  utils.rs
move-bytecode-utils/: Cargo.toml
move-bytecode-utils/src/: layout.rs  lib.rs  module_cache.rs
move-bytecode-verifier/: Cargo.toml
move-bytecode-verifier-meter/: Cargo.toml
move-bytecode-verifier-meter/src/: bound.rs  dummy.rs  lib.rs
move-bytecode-verifier/src/: ability_cache.rs  ability_field_requirements.rs  acquires_list_verifier.rs  check_duplication.rs  code_unit_verifier.rs  constants.rs  control_flow.rs  control_flow_v5.rs  cyclic_dependencies.rs  data_defs.rs  dependencies.rs  friends.rs  instantiation_loops.rs  instruction_consistency.rs  lib.rs  limits.rs  loop_summary.rs  script_signature.rs  signature.rs  stack_usage_verifier.rs  type_safety.rs  verifier.rs
move-bytecode-verifier/src/locals_safety/: abstract_state.rs  mod.rs
move-bytecode-verifier/src/reference_safety/: abstract_state.rs  mod.rs
move-bytecode-verifier/src/regression_tests/: mod.rs  reference_analysis.rs
move-bytecode-viewer/: Cargo.toml
move-bytecode-viewer/src/: bytecode_viewer.rs  interfaces.rs  lib.rs  main.rs  source_viewer.rs  viewer.rs
move-bytecode-viewer/src/tui/: mod.rs  text_builder.rs  tui_interface.rs
move-cli/: Cargo.toml
move-cli/src/: lib.rs  main.rs
move-cli/src/base/: build.rs  coverage.rs  disassemble.rs  docgen.rs  info.rs  migrate.rs  mod.rs  new.rs  test.rs
move-cli/src/sandbox/: cli.rs  mod.rs
move-command-line-common/: Cargo.toml
move-command-line-common/src/: character_sets.rs  display.rs  env.rs  error_bitset.rs  files.rs  interactive.rs  lib.rs  testing.rs
move-compiler/: Cargo.toml
move-compiler/src/: compiled_unit.rs  interface_generator.rs  ir_translation.rs  lib.rs
move-compiler/src/bos_mode/: id_leak.rs  info.rs  mod.rs  typing.rs
move-compiler/src/cfgir/: absint.rs  ast.rs  cfg.rs  mod.rs  remove_no_ops.rs  translate.rs  visitor.rs
move-compiler/src/command_line/: compiler.rs  mod.rs
move-compiler/src/diagnostics/: codes.rs  mod.rs  warning_filters.rs
move-compiler/src/editions/: mod.rs
move-compiler/src/expansion/: alias_map_builder.rs  aliases.rs  ast.rs  byte_string.rs  hex_string.rs  legacy_aliases.rs  mod.rs  name_validation.rs  path_expander.rs  primitive_definers.rs  translate.rs
move-compiler/src/hlir/: ast.rs  detect_dead_code.rs  match_compilation.rs  mod.rs  translate.rs
move-compiler/src/linters/: abort_constant.rs  combinable_comparisons.rs  constant_naming.rs  equal_operands.rs  loop_without_exit.rs  meaningless_math_operation.rs  mod.rs  redundant_ref_deref.rs  self_assignment.rs  unnecessary_unit.rs  (+3 more)
move-coverage/: Cargo.toml
move-coverage/src/: coverage_map.rs  lib.rs  source_coverage.rs  summary.rs
move-disassembler/: Cargo.toml
move-disassembler/src/: disassembler.rs  lib.rs  main.rs
move-docgen/: Cargo.toml
move-docgen/src/: code_writer.rs  docgen.rs  lib.rs
move-ir-compiler/: Cargo.toml
move-ir-compiler/src/: lib.rs  main.rs  util.rs
move-ir-to-bytecode/: Cargo.toml
move-ir-to-bytecode-syntax/: Cargo.toml
move-ir-to-bytecode-syntax/src/: lexer.rs  lib.rs  syntax.rs
move-ir-to-bytecode/src/: compiler.rs  context.rs  lib.rs  parser.rs
move-ir-types/: Cargo.toml
move-ir-types/src/: ast.rs  lib.rs  location.rs
move-model/: Cargo.toml
move-model-2/: Cargo.toml
move-model-2/src/: compiled.rs  compiled_model.rs  display.rs  lib.rs  model.rs  source_model.rs
move-model/src/: ast.rs  code_writer.rs  exp_generator.rs  lib.rs  model.rs  options.rs  pragmas.rs  symbol.rs  ty.rs  well_known.rs
move-package/: Cargo.toml
move-package/src/: lib.rs  package_hooks.rs  package_lock.rs
move-proc-macros/: Cargo.toml
move-proc-macros/src/: lib.rs
move-stackless-bytecode/: Cargo.toml
move-stackless-bytecode/src/: access_path.rs  access_path_trie.rs  annotations.rs  borrow_analysis.rs  clean_and_optimize.rs  compositional_analysis.rs  dataflow_analysis.rs  dataflow_domains.rs  debug_instrumentation.rs  eliminate_imm_refs.rs  escape_analysis.rs  function_data_builder.rs  function_target.rs  function_target_pipeline.rs  graph.rs  inconsistency_check.rs  lib.rs  livevar_analysis.rs  loop_analysis.rs  memory_instrumentation.rs  mono_analysis.rs  mut_ref_instrumentation.rs  mutation_tester.rs  number_operation.rs  number_operation_analysis.rs  options.rs  packed_types_analysis.rs  pipeline_factory.rs  reaching_def_analysis.rs  stackless_bytecode.rs  stackless_bytecode_generator.rs  stackless_control_flow_graph.rs
move-stdlib-natives/: Cargo.toml
move-stdlib-natives/src/: bcs.rs  debug.rs  hash.rs  helpers.rs  lib.rs  signer.rs  string.rs  type_name.rs  unit_test.rs  vector.rs
move-symbol-pool/: Cargo.toml
move-symbol-pool/src/: lib.rs  pool.rs  symbol.rs
move-trace-format/: Cargo.toml
move-trace-format/src/: format.rs  interface.rs  lib.rs  memory_tracer.rs
move-transactional-test-runner/: Cargo.toml
move-transactional-test-runner/src/: framework.rs  lib.rs  tasks.rs  vm_test_harness.rs
move-unit-test/: Cargo.toml
move-unit-test/src/: cargo_runner.rs  extensions.rs  lib.rs  main.rs  test_reporter.rs  test_runner.rs
move-vm-profiler/: Cargo.toml
move-vm-profiler/src/: lib.rs
move-vm-runtime/: Cargo.toml
move-vm-runtime/src/: data_cache.rs  debug.rs  interpreter.rs  lib.rs  loader.rs  logging.rs  move_vm.rs  native_extensions.rs  native_functions.rs  runtime.rs  session.rs  tracing.rs
(+233 files in other folders)
