[workspace]
resolver = "2"

members = [
    "enum-compat-util",
    "move-proc-macros",
    "move-core-types",
    "move-binary-format",
    "move-vm-config",
    "move-vm-profiler",
    "move-vm-types",
    "move-vm-test-utils",
    "move-borrow-graph",
    "move-abstract-stack",
    "move-bytecode-verifier-meter",
    "move-abstract-interpreter",
    "move-bytecode-verifier",
    "move-trace-format",
    "move-vm-runtime",
    "move-symbol-pool",
    "move-command-line-common",
    "move-ir-types",
    "move-ir-to-bytecode-syntax",
    "move-ir-to-bytecode",
    "move-bytecode-source-map",
    "move-ir-compiler",
    "move-compiler",
    "move-coverage",
    "move-disassembler",
    "move-model",
    "move-model-2",
    "move-docgen",
    "move-stackless-bytecode",
    "move-stdlib-natives",
    "move-stdlib",
    "move-unit-test",
    "move-bytecode-utils",
    "move-package",
    "move-bytecode-viewer",
    "move-cli",
    "move-analyzer",
]

[workspace.package]
version = "1.0.0"
authors = ["digc labs"]
repository = "https://github.com/digc-labs/move"
homepage = "https://github.com/digc-labs"
license = "Apache-2.0"
edition = "2021"

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
enum-compat-util = { path = "enum-compat-util" }
move-proc-macros = { path = "move-proc-macros" }
move-core-types = { path = "move-core-types" }
move-binary-format = { path = "move-binary-format" }
move-vm-config = { path = "move-vm-config" }
move-vm-profiler = { path = "move-vm-profiler" }
move-vm-types = { path = "move-vm-types" }
move-vm-test-utils = { path = "move-vm-test-utils" }
move-borrow-graph = { path = "move-borrow-graph" }
move-abstract-stack = { path = "move-abstract-stack" }
move-bytecode-verifier-meter = { path = "move-bytecode-verifier-meter" }
move-abstract-interpreter = { path = "move-abstract-interpreter" }
move-bytecode-verifier = { path = "move-bytecode-verifier" }
move-trace-format = { path = "move-trace-format" }
move-vm-runtime = { path = "move-vm-runtime" }
move-symbol-pool = { path = "move-symbol-pool" }
move-command-line-common = { path = "move-command-line-common" }
move-ir-types = { path = "move-ir-types" }
move-ir-to-bytecode-syntax = { path = "move-ir-to-bytecode-syntax" }
move-ir-to-bytecode = { path = "move-ir-to-bytecode" }
move-bytecode-source-map = { path = "move-bytecode-source-map" }
move-ir-compiler = { path = "move-ir-compiler" }
move-compiler = { path = "move-compiler" }
move-coverage = { path = "move-coverage" }
move-disassembler = { path = "move-disassembler" }
move-model = { path = "move-model" }
move-model-2 = { path = "move-model-2" }
move-docgen = { path = "move-docgen" }
move-stackless-bytecode = { path = "move-stackless-bytecode" }
move-stdlib-natives = { path =  "move-stdlib-natives" }
move-stdlib = { path =  "move-stdlib" }
move-unit-test = { path = "move-unit-test" }
move-bytecode-utils = { path =  "move-bytecode-utils" }
move-package = { path =  "move-package" }
move-bytecode-viewer = { path = "move-bytecode-viewer" }
move-cli = { path = "move-cli" }
move-analyzer = { path =  "move-analyzer" }

aes-gcm = "0.8.0"
anyhow = "1.0.52"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
async-trait = "0.1.42"
bcs = "0.1.4"
better_any = "0.1.1"
bitvec = "0.19.4"
byteorder = "1.4.3"
bytes = "1.0.1"
chrono = "0.4.19"
clap = { version = "4", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
crossterm = "0.25.0"
curve25519-dalek = { version = "0.1.0", package = "curve25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
datatest-stable = "0.1.1"
derivative = "2.2.0"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dunce = "1.0.2"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "u64_backend"] }
ethnum = "1.0.4"
fail = "0.4.0"
file_diff = "1.0.0"
futures = "0.3.12"
getrandom = "0.2.9"
heck = "0.3.2"
hex = "0.4.3"
hex-literal = "0.3.4"
hkdf = "0.10.0"
im = "15.1.0"
indexmap = "2.8.0"
internment = { version = "0.5.0", features = [ "arc"] }
itertools = "0.10.0"
json_comments = "0.2.2"
leb128 = "0.2.5"
libfuzzer-sys = "0.4"
log = { version = "0.4.14", features = ["serde"] }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
memory-stats = "1.0.0"
mirai-annotations = "1.10.1"
named-lock = "0.2.0"
num = "0.4.0"
num_cpus = "1.13.0"
once_cell = "1.7.2"
ouroboros = "0.17.2"
parking_lot = "0.11.1"
paste = "1.0.5"
packed_struct = "0.10.1"
petgraph = "0.5.1"
phf = { version = "0.11", features = ["macros"] }
plotters = { version = "0.3.0", default-features = false, features = ["evcxr", "line_series", "histogram"]}
pretty = "0.10.0"
prettydiff = "0.4.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"]}
proc-macro2 = "1.0.24"
proptest = "1.6.0"
proptest-derive = "0.5"
quote = "1.0.9"
rand = "0.8.0"
ratatui = "0.29.0"
rayon = "1.10.0"
ref-cast = "1.0.6"
regex = "1.5.5"
ripemd160 = "0.9.1"
serde = { version = "1.0.124", features = ["derive"] }
serde-name = "0.1.1"
serde-reflection = "0.5"
serde_bytes = "0.11.5"
serde_json = "1.0.64"
serde_yaml = "0.8.26"
serde_with = "3.9.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
shell-words = "1.0.0"
simplelog = "0.9.0"
similar = "2.4.0"
smallvec = "1.6.1"
stacker = "0.1.15"
static_assertions = "1.1.0"
syn = { version = "1.0.64", features = ["derive"] }
tempfile = "3.2.0"
tera = "1.16.0"
thiserror = "1.0.24"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.8"
toml_edit =  { version = "0.14.3", features = ["easy"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
treeline = "0.1.0"
uint = "0.9.4"
url = "2.2.2"
variant_count = "1.1.0"
vfs = "0.10.0"
walkdir = "2.3.1"
whoami = { version = "1.2.1" }
x25519-dalek = { version = "0.1.0", package = "x25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
z3tracer = "0.8.0"
inline_colorization = "0.1.6"
insta = "1.42.0"

[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
debug = 0 # for saving disk space during linking
incremental = false
codegen-units = 16
