[package]
name = "move-analyzer"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
crossbeam.workspace = true
dunce.workspace = true
im.workspace = true
itertools.workspace = true
json_comments.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
url.workspace = true
vfs.workspace = true

[dev-dependencies]
datatest-stable.workspace = true
