[package]
name = "move-bytecode-source-map"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-symbol-pool.workspace = true
move-binary-format.workspace = true
move-command-line-common.workspace = true

bcs.workspace = true

serde.workspace = true
serde_json.workspace = true

[features]
default = []
