[package]
name = "move-bytecode-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
petgraph.workspace = true
serde-reflection.workspace = true
indexmap.workspace = true
