[package]
name = "move-bytecode-verifier-meter"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-config.workspace = true
