[package]
name = "move-bytecode-verifier"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
petgraph.workspace = true

move-borrow-graph.workspace = true
move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-core-types.workspace = true
move-vm-config.workspace = true
move-abstract-stack.workspace = true
move-abstract-interpreter.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[features]
default = []
