[package]
name = "move-bytecode-viewer"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
regex.workspace = true

move-bytecode-source-map.workspace = true
move-binary-format.workspace = true
move-disassembler.workspace = true

[features]
default = []
