[package]
name = "move-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
serde_yaml.workspace = true
similar.workspace = true
tempfile.workspace = true
toml_edit.workspace = true
walkdir.workspace = true

move-bytecode-source-map.workspace = true
move-bytecode-verifier.workspace = true
move-disassembler.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true
move-coverage.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-compiler.workspace = true
move-stdlib.workspace = true
move-stdlib-natives.workspace = true
move-vm-types.workspace = true
move-vm-runtime.workspace = true
move-vm-profiler.workspace = true
move-vm-test-utils.workspace = true
move-binary-format.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
move-unit-test.workspace = true
move-bytecode-viewer.workspace = true
move-model-2.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[bin]]
name = "move"
path = "src/main.rs"

[features]
tiered-gas = ["move-vm-test-utils/tiered-gas"]
tracing = ["move-vm-runtime/tracing"]
