[package]
name = "move-command-line-common"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
colored.workspace = true
dirs-next.workspace = true
hex.workspace = true
insta = { workspace = true, features = ["serde"] }
once_cell.workspace = true
packed_struct.workspace = true
serde.workspace = true
sha2.workspace = true
vfs.workspace = true
walkdir.workspace = true

move-core-types.workspace = true
move-binary-format.workspace = true

[dev-dependencies]
proptest.workspace = true
