[package]
name = "move-compiler"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
codespan-reporting.workspace = true
dunce.workspace = true
hex.workspace = true
regex.workspace = true
clap.workspace = true
petgraph.workspace = true
tempfile.workspace = true
once_cell.workspace = true
lsp-types.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
stacker.workspace = true
vfs.workspace = true
insta.workspace = true

bcs.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true
move-bytecode-verifier.workspace = true
move-symbol-pool.workspace = true
move-ir-types.workspace = true
move-ir-to-bytecode.workspace = true
move-borrow-graph.workspace = true
move-bytecode-source-map.workspace = true
move-command-line-common.workspace = true
move-proc-macros.workspace = true

[dev-dependencies]
move-stdlib.workspace = true
datatest-stable.workspace = true
