[package]
name = "move-coverage"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
petgraph.workspace = true
clap.workspace = true
serde.workspace = true
anyhow.workspace = true
codespan = { workspace = true, features = ["serialization"] }
colored.workspace = true

bcs.workspace = true

move-command-line-common.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-binary-format.workspace = true
move-bytecode-source-map.workspace = true
move-abstract-interpreter.workspace = true
indexmap.workspace = true

[features]
default = []
