[package]
name = "move-disassembler"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
inline_colorization.workspace = true

move-bytecode-source-map.workspace = true
move-command-line-common.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-binary-format.workspace = true
move-coverage.workspace = true
move-compiler.workspace = true
move-abstract-interpreter.workspace = true
move-symbol-pool.workspace = true

bcs.workspace = true
clap.workspace = true
hex.workspace = true

[features]
default = []
