[package]
name = "move-docgen"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
move-binary-format.workspace = true
move-compiler.workspace = true
move-model-2.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-symbol-pool.workspace = true

codespan.workspace = true
codespan-reporting.workspace = true
itertools.workspace = true
log.workspace = true
num.workspace = true
regex.workspace = true
anyhow.workspace = true
serde.workspace = true
once_cell.workspace = true
clap.workspace = true
