[package]
name = "move-ir-to-bytecode-syntax"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
move-ir-types.workspace = true
move-core-types.workspace = true
move-symbol-pool.workspace = true
move-command-line-common.workspace = true

[features]
default = []
