[package]
name = "move-ir-to-bytecode"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
move-ir-to-bytecode-syntax.workspace = true
move-command-line-common.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-binary-format.workspace = true
move-symbol-pool.workspace = true
move-bytecode-source-map.workspace = true
log.workspace = true
codespan-reporting.workspace = true
ouroboros.workspace = true

[features]
default = []
