[package]
name = "move-ir-types"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
hex.workspace = true
once_cell.workspace = true

move-core-types.workspace = true
move-symbol-pool.workspace = true
move-command-line-common.workspace = true
