[package]
name = "move-model"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
move-compiler.workspace = true
move-binary-format.workspace = true
move-bytecode-source-map.workspace = true
move-ir-types.workspace = true
move-core-types.workspace = true
move-disassembler.workspace = true
move-command-line-common.workspace = true
move-symbol-pool.workspace = true

codespan.workspace = true
codespan-reporting.workspace = true
itertools.workspace = true
log.workspace = true
num.workspace = true
once_cell.workspace = true
regex.workspace = true
anyhow.workspace = true
serde.workspace = true

[dev-dependencies]
datatest-stable.workspace = true
