[package]
name = "move-package"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
toml.workspace = true
toml_edit.workspace = true
serde.workspace = true
petgraph.workspace = true
anyhow.workspace = true
walkdir.workspace = true
clap.workspace = true
colored.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
sha2.workspace = true
regex.workspace = true
treeline.workspace = true
once_cell.workspace = true
named-lock.workspace = true
itertools.workspace = true
vfs.workspace = true
dunce.workspace = true

move-binary-format.workspace = true
move-compiler.workspace = true
move-bytecode-source-map.workspace = true
move-docgen.workspace = true
move-disassembler.workspace = true
move-core-types.workspace = true
move-symbol-pool.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true
move-model-2.workspace = true

whoami.workspace = true

[dev-dependencies]
datatest-stable.workspace = true
expect-test = "1.4.0"
