[package]
name = "move-stdlib-natives"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# referred to via path for execution versioning
move-vm-types = { path = "../move-vm-types" }
move-binary-format.workspace = true
move-core-types.workspace = true
# referred to via path for execution versioning
move-vm-runtime = { path = "../move-vm-runtime" }
smallvec.workspace = true
sha2.workspace = true
sha3.workspace = true
hex.workspace = true

[features]
default = []
testing = []
