[package]
name = "move-trace-format"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
move-core-types.workspace = true
serde.workspace = true
move-binary-format.workspace = true

serde_json = { workspace = true, features = ["arbitrary_precision"] }

[features]
default = []
