[package]
name = "move-transactional-test-runner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
regex.workspace = true
rayon.workspace = true
clap.workspace = true
tempfile.workspace = true
async-trait.workspace = true
tokio.workspace = true

move-bytecode-source-map.workspace = true
move-disassembler.workspace = true
move-binary-format.workspace = true
move-cli.workspace = true
move-command-line-common.workspace = true
move-core-types.workspace = true
move-ir-compiler.workspace = true
move-ir-types.workspace = true
move-compiler.workspace = true
move-stdlib.workspace = true
move-stdlib-natives.workspace = true
move-symbol-pool.workspace = true
move-vm-config.workspace = true
move-vm-test-utils.workspace = true
move-vm-types.workspace = true
move-vm-runtime.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[features]
failpoints = ['move-vm-runtime/failpoints']
