[package]
name = "move-unit-test"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
better_any.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
rayon.workspace = true
regex.workspace = true
once_cell.workspace = true
itertools.workspace = true

move-command-line-common.workspace = true
move-stdlib = { workspace = true, features = ["testing"] }
move-stdlib-natives = { workspace = true, features = ["testing"] }
move-core-types.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-symbol-pool.workspace = true
move-vm-types.workspace = true
move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-profiler.workspace = true
move-vm-test-utils.workspace = true
move-binary-format.workspace = true
move-model.workspace = true
move-bytecode-utils.workspace = true
move-trace-format.workspace = true
bcs.workspace = true
rand.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[bin]]
name = "move-unit-test"
path = "src/main.rs"

[features]
tracing = []
