[package]
name = "move-vm-profiler"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
tracing.workspace = true

move-vm-config.workspace = true

[features]
tracing = ["move-vm-config/tracing"]
