[package]
name = "move-vm-runtime"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_any.workspace = true
fail.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
tracing.workspace = true
smallvec.workspace = true

move-bytecode-verifier = { path = "../move-bytecode-verifier" }
move-core-types.workspace = true
move-vm-config.workspace = true
move-vm-types = { path = "../move-vm-types" }
move-binary-format.workspace = true
move-vm-profiler.workspace = true
move-trace-format.workspace = true

[dev-dependencies]
anyhow.workspace = true
hex.workspace = true
proptest.workspace = true
move-ir-compiler.workspace = true
move-compiler.workspace = true

[features]
default = []
fuzzing = ["move-vm-types/fuzzing"]
failpoints = ["fail/failpoints"]
testing = []
lazy_natives = []
tracing = [
    "move-vm-config/tracing",
    "move-vm-profiler/tracing",
]
